# it_center_client

./: Cargo.toml  angular.json  package-lock.json  package.json
src/: main.rs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/messages/: mod.rs
src/app/: app.component.css  app.component.html  app.component.ts  app.module.ts
src/app/message-dashboard/: message-dashboard.module.ts
src/app/message-dashboard/message-dashboard/: message-dashboard.component.html  message-dashboard.component.spec.ts  message-dashboard.component.ts
src/messages/: mod.rs
